[PPC64] Problems with -XX:+VerifyStack

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 19
    • Affects Version/s: 19
    • Component/s: hotspot
    • None
    • b27
    • ppc

        VM crashes with "guarantee(last != NULL) failed: last may not be null" when running with -XX:+VerifyStack after JDK-8284161 (debug build only).

        Can be reproduced in tests like:
        compiler/c2/cr6589834/Test_ia32.java
        testlibrary_tests/ir_framework/tests/TestDFlags.java
        compiler/uncommontrap/TestDeoptOOM.java
        compiler/interpreter/TestVerifyStackAfterDeopt.java
        compiler/interpreter/VerifyStackWithUnreachableBlock.java

        Stack frames get analyzed in Deoptimization::unpack_frames which is a JRT_LEAF function. That doesn't work reliably in general and currently doesn't work on PPC64 because the deoptimization and uncommon trap stubs don't set the last Java PC to where the OopMaps are.

              Assignee:
              Martin Doerr
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: