8288105: [PPC64] Problems with -XX:+VerifyStack